--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -37,6 +37,35 @@
   font-size: 1rem;
 }
 
+.btn__cta_yellow {
+  margin-top: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 35px;
+  background-color: #feb949;
+  border: 0;
+  outline: none;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 1rem;
+  height: 68px;
+  width: 195px;
+  left: 192px;
+  top: 486px;
+  border-radius: 58px;
+}
+
+.btn__cta-text {
+  color: #55656d;
+}
+
 .carousel__pageanation-dots {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -61,7 +90,9 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: end;
-  width: 50vw;
+  width: 100vw;
+  position: relative;
+  right: 50vw;
 }
 
 .nav {
@@ -105,6 +136,20 @@
 
 .carousel__column-left {
   width: 50%;
+  margin-left: 5rem;
+  margin-right: 4rem;
+}
+
+.carousel__hero-text {
+  text-align: left;
+  font-size: 1.125rem;
+  font-weight: 400;
+  color: #55656d;
+}
+
+.carousel__title {
+  text-align: left;
+  font-size: 3.375rem;
 }
 
 .carousel__column-right {
@@ -116,7 +161,7 @@ body {
 }
 
 a {
-  color: #0070e0;
+  text-decoration: none;
 }
 
 .App {
