--- a/src/styles/partials/_components.scss
+++ b/src/styles/partials/_components.scss
@@ -34,6 +34,27 @@
     font-weight: 600;
     font-size: 1rem;
   }
+  &__cta_yellow {
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 35px;
+    background-color: $cta-yellow;
+    border: 0;
+    outline: none;
+    font-family: "Open Sans";
+    font-weight: 600;
+    font-size: 1rem;
+    height: 68px;
+    width: 195px;
+    left: 192px;
+    top: 486px;
+    border-radius: 58px;
+  }
+  &__cta-text {
+    color: $gray_text;
+  }
 }
 .carousel {
   &__pageanation-dots {
@@ -51,5 +72,8 @@
 .slick-dots {
   display: flex;
   justify-content: end;
-  width: 50vw;
+  width: 100vw;
+  position: relative;
+  right: 50vw;
+  //   background-color: yellow;
 }
