--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -95,6 +95,63 @@
   right: 50vw;
 }
 
+.slick-dots li button::before {
+  color: #74cfcc;
+  zoom: 250%;
+}
+
+.services__card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: column;
+          flex-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 425px;
+  width: 500px;
+  margin: 4rem;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: white;
+}
+
+.services__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 500px;
+  height: 300px;
+  border-radius: 5px 5px 0 0;
+}
+
+.services__btn {
+  margin-top: 1.75rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  top: 35px;
+  background-color: #feb949;
+  border: 0;
+  outline: none;
+  font-family: "Open Sans";
+  font-weight: 600;
+  font-size: 1rem;
+  height: 68px;
+  width: 195px;
+  left: 192px;
+  border-radius: 58px;
+}
+
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -124,6 +181,7 @@
 }
 
 .carousel {
+  background-color: #f8fafc;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -136,7 +194,7 @@
 
 .carousel__column-left {
   width: 50%;
-  margin-left: 5rem;
+  margin-left: 6rem;
   margin-right: 4rem;
 }
 
@@ -154,6 +212,28 @@
 
 .carousel__column-right {
   width: 50%;
+}
+
+.clio-helpbox {
+  z-index: 99;
+  position: absolute;
+  right: 0px;
+  bottom: 0px;
+}
+
+.services {
+  background-color: #f8fafc;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row;
+          flex-flow: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-top: 5rem;
 }
 
 body {
