Placing full width

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -1,11 +1,11 @@
 .carousel {
-    // display: flex;
-    // height: 100vh;
-    // /* min-height: 100vh; */
-    // justify-content: center;
-    // align-items: center;
-    // width: 100%;
-    // padding: 0 5rem;
+    display: flex;
+    height: 100vh;
+    /* min-height: 100vh; */
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 0 5rem;
 
     &__img {
         width: 80%;
