--- a/src/components/ImmigrationService/ImmigrationService.scss
+++ b/src/components/ImmigrationService/ImmigrationService.scss
@@ -23,3 +23,12 @@
         }
     }
 }
+
+.display {
+    display: inline;
+    border: 1px solid black;
+
+    &-not {
+        display: none;
+    }
+}
