Adding all the info

--- a/src/components/Carousel/Carousel.scss
+++ b/src/components/Carousel/Carousel.scss
@@ -11,5 +11,7 @@
         width: 80%;
         max-width: 80%;
         background-position: center;
+        border-top: 1px solid #ccc;
+        box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     }
 }
