--- a/src/components/ImmigrationService/ImmigrationService.scss
+++ b/src/components/ImmigrationService/ImmigrationService.scss
@@ -21,6 +21,11 @@
         &--left {
             display: flex;
         }
+
+        // &--right: {
+        //     display: flex;
+        //     flex-direction: column;
+        // }
     }
 }
 
