--- a/src/pages/LawTypes.scss
+++ b/src/pages/LawTypes.scss
@@ -4,6 +4,7 @@
     justify-content: space-between;
     align-items: center;
   }
+
   &__title {
     font-size: 3rem;
   }
@@ -11,11 +12,50 @@
   &__card-div {
     display: flex;
     flex-wrap: wrap;
+    // width: 80%;
+    margin: 0 auto;
+    justify-content: space-between;
   }
+
+  // &__card {
+  //   width: 100%;
+  // }
+
+  // &__img {
+  //   width: 345px;
+  // }
   &__card {
-    width: 33.33%;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    height: 425px;
+    width: 500px;
+    margin: 4rem;
+    border-radius: 5px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    background-color: white;
   }
+
+  &__img {
+    object-fit: cover;
+    width: 500px;
+    height: 300px;
+    border-radius: 5px 5px 0 0;
+  }
+
   &__search {
     height: 2rem;
   }
+
+  &__type {
+    margin: 0;
+  }
+}
+
+.placeCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 30%;
 }
